--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
         <div class="row">
             <div class="loader">
-                <button id="play">Start</button>
+                <button id="play">ĐỪNG CÓ BẤM</button>
             </div>
         </div>
     </div>
@@ -31,15 +31,16 @@
                 </div>
 
                 <div class="col-12  text-center">
-                    <div id="name" class="area">Gaurav</div>
+                    <div id="name" class="area">LƯƠN CHÚA</div>
                 </div>
 
                 <div class="col-12 text-center">
                     <div class="type-wrap">
                         <div id="typed-strings" class="typing">
-                            <h2>Happy Birthday <i id="nae">Gaurav</i></h2>
-                            <h2>Have a wonderful day</h2>
-                            <h2>Filled with joy and happiness.</h2>
+                            <h2>Chúc mừng sinh nhật <i id="nae">Lươn chúa</i></h2>
+                            <h2>Tuổi mới gặp nhiều thành công, nhiều niềm vui và đặc biệt là gặp nhiều may mắn không cần phải sợ tháng 6</h2>
+                            <h2>À quên nữa lớn hơn 1 tuổi rồi nhớ bớt lươn lại nha &#128514;&#128514;&#128514;</h2>
+                            <h2>Sinh nhật vui vẻ nha ❤️❤️❤️</h2>
                         </div>
                         <span id="typed" style="white-space:pre;"></span>
                     </div>
