--- a/index.html
+++ b/index.html
@@ -38,11 +38,15 @@
                     <div class="type-wrap">
                         <div id="typed-strings" class="typing">
                             <h2>Chúc mừng sinh nhật <i id="nae">Lươn chúa</i></h2>
-                            <h2>Tuổi mới gặp nhiều thành công, nhiều niềm vui và đặc biệt là gặp nhiều may mắn không cần phải sợ tháng 6</h2>
-                            <h2>À quên nữa lớn hơn 1 tuổi rồi nhớ bớt lươn lại nha &#128514;&#128514;&#128514;</h2>
+                            <h2>Tuổi mới gặp nhiều thành công,</h2>
+                            <h2>nhiều niềm vui</h2>
+                            <h2>và đặc biệt là gặp nhiều may mắn</h2>
+                            <h2>không cần phải sợ tháng 6</h2>
+                            <h2>À quên nữa</h2>
+                            <h2>lớn hơn 1 tuổi rồi nhớ bớt lươn lại nha &#128514;&#128514;&#128514;</h2>
                             <h2>Sinh nhật vui vẻ nha ❤️❤️❤️</h2>
                         </div>
-                        <span id="typed" style="white-space:pre;"></span>
+                        <div id="typed" style="white-space:pre;"></div>
                     </div>
                 </div>
 
