--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <div class="row">
-            <div class="loader">
+            <div class="loader">Start
                 <button id="play">ĐỪNG CÓ BẤM</button>
             </div>
         </div>
