--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
     <div class="container">
         <div class="row">
-            <div class="loader">Start
-                <button id="play">ĐỪNG CÓ BẤM</button>
+            <div class="loader">
+                <button id="play">Start</button>
             </div>
         </div>
     </div>
