--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                             <h2>lớn hơn 1 tuổi rồi nhớ bớt lươn lại nha &#128514;&#128514;&#128514;</h2>
                             <h2>Sinh nhật vui vẻ nha ❤️❤️❤️</h2>
                         </div>
-                        <div id="typed" style="white-space:pre;"></div>
+                        <span id="typed" style="white-space:pre;"></span>
                     </div>
                 </div>
 
