--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                             <h2>và đặc biệt là gặp nhiều may mắn</h2>
                             <h2>không cần phải sợ tháng 6</h2>
                             <h2>À quên nữa</h2>
-                            <h2>lớn hơn 1 tuổi rồi nhớ bớt lươn lại nha &#128514;&#128514;&#128514;</h2>
+                            <h2>lớn rồi nhớ bớt lươn lại nha &#128514;&#128514;&#128514;</h2>
                             <h2>Sinh nhật vui vẻ nha ❤️❤️❤️</h2>
                         </div>
                         <span id="typed" style="white-space:pre;"></span>
