--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                             <h2>Tuổi mới gặp nhiều thành công,</h2>
                             <h2>nhiều niềm vui</h2>
                             <h2>và đặc biệt là gặp nhiều may mắn</h2>
-                            <h2>để không cần phải sợ tháng 6</h2>
+                            <h2>để không cần phải sợ tháng 6 nữa</h2>
                             <h2>À quên nữa</h2>
                             <h2>lớn rồi nhớ bớt lươn lại nha &#128514;&#128514;&#128514;</h2>
                             <h2>Sinh nhật vui vẻ nha ❤️❤️❤️</h2>
